# drawbridge

crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  redirect.rs  routes.rs  session.rs
crates/auth/src/providers/: github.rs  mod.rs
crates/auth/tests/routes/: mod.rs  protected.rs  route.rs  status.rs
examples/: localhost_server.rs
