[package]
name = "drawbridge-auth"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[dependencies]
# Internal dependencies
# External dependencies
axum = { version = "0.5.0", features = ["headers"] }
base64 = "0.13"
bincode = "1"
headers = "0.3"
http = "0.2"
oauth2 = { version = "4.1", features = ["reqwest"] }
rand = "0.8"
reqwest = "0.11"
rsa = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
hyper = "0.14"
regex = "1"
tokio = { version = "1.8.0", features = ["rt", "macros"] } 
tokio-test = "0.4"
tower = "0.4"

[features]
integration-tests = []
